# deeplearning_flask

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .ruff.toml  Deep Learning MNIST prediction model with Keras.ipynb  Dockerfile  Makefile  README.md  dlflask36.yaml  dlflask37.yaml  docker-compose.yml  mnist_model.h5  pyproject.toml  requirements.txt  requirements_dev.txt  server.py  test.py
.github/workflows/: ci_tests.yml
api/templates/: index.html
api/tests/: test.py
app/: Makefile  __init__.py  api.py  config.py  mnist_model.h5  mnist_model.keras  model.py  server.py
app/api/: __init__.py  views.py
app/app/: __init__.py  api.py  model.py
app/app/templates/: dlflask.html  index.html
app/templates/: index.html
app/tests/: conftest.py  test_app.py
docs/: architecture.puml
nginx/conf.d/: local.conf
system_test/: test.py
templates/: index.html
tests/: test_system.py
